--- a/.github/workflows/reeek.yml
+++ b/.github/workflows/reeek.yml
@@ -11,15 +11,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: 2.7
+          ruby-version: 3.1.3
 
       - name: Install dependencies
         run: gem install reek
 
       - name: Run Reek
-        run: reek --failure-exit-code
+        run: reek --failure-exit-code 2
